--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,17 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./resources/js/*"
-            ],
-            "@Components/*": [
-                "resources/js/Components/*"
-            ]
+            "@/*": ["resources/js/*"]
         }
-    },
-    "exclude": [
-        "node_modules",
-        "public"
-    ]
-    
+    }
 }
