--- a/package.json
+++ b/package.json
@@ -12,23 +12,35 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@headlessui/react": "^1.2.0",
-        "@inertiajs/inertia": "^0.9.0",
-        "@inertiajs/inertia-react": "^0.6.0",
+        "@inertiajs/inertia": "^0.9.4",
+        "@inertiajs/inertia-react": "^0.6.4",
         "@inertiajs/inertia-vue3": "^0.5.1",
         "@inertiajs/progress": "^0.2.4",
+        "@popperjs/core": "^2.10.2",
         "@tailwindcss/forms": "^0.3.2",
         "@vue/compiler-sfc": "^3.0.5",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
+        "babel-preset-react": "^6.24.1",
+        "bootstrap": "^5.1.3",
+        "browser-sync": "^2.27.7",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "laravel-echo": "^1.11.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
         "postcss-import": "^14.0.1",
+        "pusher-js": "^7.0.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "tailwindcss": "^2.1.2",
-        "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.2.1"
     }
 }
